--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/__SCRIPT__"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
